# loquendobot

./: .dockerignore  .gitignore  devbox.json  lambda.Dockerfile  pyproject.toml  requirements.txt
infra/: Pulumi.yaml  index.ts  package-lock.json  package.json
loquendobot/: config.py  config.sample.py  main.py  secrets.py  tts.py  utils.py
